feat: add the updating booth API (#91)
* feat: get booth by id

* feat: aip update booth

* feat: delete

* fix: openapi

* fix: open api

* fix: openapi

* feat: move server and url

* feat: openapi

* feat: add readonly

* feat: handle

* feat: opent APi

* feat: public api
