# src/components/exhibition/controllers/exhibition.controller.ts
@@ -1,7 +1,8 @@
-import { Controller, Get, Param, Post, Body } from '@nestjs/common';
+import { Controller, Get, Param, Post, Body, Put } from '@nestjs/common';
 import { ExhibitionService } from '@/components/exhibition/services/exhibition.service';
 import { Exhibition as ExhibitionDto } from '@/components/exhibition/dto/exhibition.dto';
 import { Paginate, PaginateQuery } from '@/decorators/paginate.decorator';
+import { Booth as BoothDto } from '@/components/exhibition/dto/booth.dto';
 
 @Controller('exhibitions')
 export class ExhibitionController {
@@ -22,6 +23,26 @@ export class ExhibitionController {
         return this.exhibitionService.createExhibition(exhibition);
     }
 
+    @Put(':exhibitionId/booths/:boothId')
+    updateBooth(
+        @Param('exhibitionId') exhibitionId: string,
+        @Param('boothId') boothId: string,
+        @Body() boothDto: BoothDto,
+    ) {
+        return this.exhibitionService.updateBooth(
+            exhibitionId,
+            boothId,
+            boothDto,
+        );
+    }
+
+    @Post(':exhibitionId/booths')
+    createBooth(
+        @Param('exhibitionId') exhibitionId: string,
+        @Body() boothDto: BoothDto,
+    ) {
+        return this.exhibitionService.createBooth(exhibitionId, boothDto);
+    }
     @Get(':exhibitionId/booths/:boothId')
     getBoothById(
         @Param('exhibitionId') exhibitionId: string,
